--- a/flow/templates/flow/day2_timeline.html
+++ b/flow/templates/flow/day2_timeline.html
@@ -48,65 +48,102 @@
       <ol>
         <li>
           <div>
-            <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+            <time>THROUGHOUT THE FEST</time> 
+            Crosswords </br> 
+            Mazemerize </br>
+            Startup Fair </br>
+            REC Arcade </br>
           </div>
         </li>
         <li>
           <div>
-            <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+            <time>09(AM)-12(PM)</time> 
+            <time>01(PM)-03(PM)</time> 
+            WORKSHOP (Cybersecurity) </br>
+            WORKSHOP (ML)    </br>
+          </div>
+        </li>
+       
+        <li>
+          <div>
+            <time>09(AM)-12(PM)</time> 
+            Call Out Sherlock </br>
+            Bid Wit </br>
+            Car Auction </br>
+           Startup Fair </br>
+          
+          </div>
+        </li>
+        
+      
+        <li>
+          <div>
+            <time>09(AM)-12(PM)</time> 
+            Linux Corner (throughout day)</br>
+            Hackoverflow (throughout day) </br>
+            Interficio(throughout day)
+          </div>
+        </li>
+    
+        <li>
+          <div>
+            <time>01(PM)-03(PM)</time> 
+            Call Out Sherlock </br>
+            House of Cups </br>
+            Electra </br>
+            Car Auction </br>
+            Onspot Hackathon</br>
+            Mindsweeper(finalRound)</br>
+          </div>
+        </li>
+       
+        
+        <li>
+          <div>
+            <time>01(PM)-03(PM)</time> 
+            Invictus (prelims)(online) </br>
+          Be a billionaire (prelims)(online) </br>
+          Contraptions (prelims)(online) </br>
+          FantasyFootball(prelims)online(8PM-12AM)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+            <time>01(PM)-03(PM)</time> 
+          Linux Corner (throughout day)</br>
+            Hackoverflow (throughout day) </br>
+            Interficio(throughout day)<br>
           </div>
         </li>
         <li>
           <div>
-            <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>03(PM)-06(PM)</time>
+             Matrix </br>
+             Electra </br>
+             Flying the UAV  </br>
+             Ripple Effect </br>
+             Onspot Hackathon</br>
+             Mindsweeper(finalRound)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>03(PM)-06(PM)</time>
+            Pitstop(online) </br>
+            Freemex (online) </br>
+            MinderSnatch (online) </br>
           </div>
         </li>
         <li>
           <div>
-            <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>03(PM)-06(PM)</time>
+            Techmela(Arena) </br>
+            Linux Corner (throughout day)</br>
+            Hackoverflow (throughout day) </br>
+            Interficio(throughout day)<br>
+            FantasyFootball(prelims)online(8PM-12AM)</br>
           </div>
         </li>
-        <li>
-          <div>
-            <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li></li>
       </ol>
     
       <div class="arrows">
