--- a/flow/templates/flow/day3_timeline.html
+++ b/flow/templates/flow/day3_timeline.html
@@ -48,142 +48,143 @@
       <ol>
         <li>
           <div>
-            <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+            <time>THROUGHOUT THE FEST</time> 
+            Crosswords </br> 
+            Mazemerize </br>
+            Startup Fair </br>
+            REC Arcade </br>
+          </div>
+        </li>
+       
+       
+        <li>
+          <div>
+              <time>09(AM)-12(PM)
+              </time> 
+              <time>01(PM)-03(PM)
+              </time> 
+                WORKSHOP(MNTC)</br>
+                WORKSHOP(SAE)</br>
+                WORKSHOP(CCA)</Br>
+                WORKSHOP(CCA)</Br>
+                
           </div>
         </li>
         <li>
           <div>
-            <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+              <time>09(AM)-12(PM)
+              </time> 
+              <time>01(PM)-03(PM)
+              </time> 
+                WORKSHOP(RECursion)</br>
+                WORKSHOP(Cybersecurity)</br>
+                WORKSHOP(ML)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+            <time>09(AM)-12(PM)</time> 
+            Terrorist Takedown</br>
+            StreetFury(ARMAGADON)</br>
+            Temporal Trek </br>
+            Onspot Hackathon</br>
+           
           </div>
         </li>
         <li>
           <div>
-            <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>09(AM)-12(PM)</time> 
+            Be a billionaire </br>
+            Conjecture </br>
+            Journo Detective (prelims) </br>
+            Twin Attack(final round)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>09(AM)-12(PM)</time> 
+               DEATH NOTE (DMSenAuditorium) <br>
+               Car Auction </br>
+               WDCT Corner (Arena)</br>
+               Gaming Event  </br>
+               Linux Corner(throughout day)</br>
+               Infernitio(throughout day)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>09(AM)-12(PM)</time>
+            Freemex(online)</br>
+            Foobar CTF (online) </br>
+            MinderSnatch(online)</br>
+            Hackoverflow(online)</br>
           </div>
         </li>
         <li>
           <div>
-            <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>01(PM)-03(PM)</time>
+            Portfoloio Ventures </br>
+            Car Auction </br>
+            Invictus </br>
+            Conjecture </br>
+            Twin Attack </br>
+            Quantum Quest </br>
           </div>
         </li>
         <li>
           <div>
-            <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+            <time>01(PM)-03(PM)</time>
+            DEATHNOTE (DMSenAuditorium) </br>
+          Roboliga(ARMAGADON) </Br>
+          WDCT Corner </br>
+          Gaming Event </br>
+          Fantacy Footbal (DM Sen)
           </div>
         </li>
         <li>
           <div>
-            <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+            <time>01(PM)-03(PM)</time>
+            Freemex(online)</br>
+            Foobar CTF (online) </br>
+            MinderSnatch(online)</br>
+            Hackoverflow(online)</br>
+          </div>
+        </li>
+        
+        <li>
+          <div>
+            <time>03(PM)-05(PM)</time>
+            Darwinina</br>
+            Tech Charades  </br>
+            Contraptions </br>
+            Hackoverflow(online)</br>
+            Qauntum Quest </br>
           </div>
         </li>
         <li>
           <div>
-            <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>03(PM)-05(PM)</time>
+            DEATHNOTE(DMSenAuditorium)</br>
+            Roboliga(ARMAGADON) </Br>
+            Flying the UAV(Arena)</br>
+            WDCT Corner(Arena) </br>
+            Techmela </br>     
+            Ripple Effect (Arena)<br>
           </div>
         </li>
         <li>
           <div>
-            <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+            <time>03(PM)-05(PM)</time>
+            Pitstop(online)</br>
+            REChase(3:30pm-6pm)</br>
+            Incanity(online)</br>
+            Perplixity(online)</br>
+            Foobar CTF (online)</br>
+            Fantacy Football(DMSen)</br>
           </div>
         </li>
-        <li>
-          <div>
-            <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li></li>
+       
       </ol>
-    
-      <div class="arrows">
-        <button class="arrow arrow__prev disabled" disabled>
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
-        </button>
-        <button class="arrow arrow__next">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
-        </button>
-      </div>
-    </section>
-
-    <section id="day2" class="timeline active" style="display: none;">
-      <ol>
-        <li>
-          <div>
-            <time>1939</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li></li>
-      </ol>
-    
       <div class="arrows">
         <button class="arrow arrow__prev disabled" disabled>
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
