--- a/flow/templates/flow/day4_timeline.html
+++ b/flow/templates/flow/day4_timeline.html
@@ -44,80 +44,132 @@
     <a class="btn-ap" style="color:rgb(255, 255, 255)" href="{% url 'timelineDay3' %}">Day2</a>
     <a class="btn-ap" style="color:rgb(255, 255, 255)" href="{% url 'timelineDay4' %}">Day3</a>
   </div>
-    <section id="day1" class="timeline active">
-      <ol>
-        <li>
-          <div>
-            <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li></li>
-      </ol>
-    
-      <div class="arrows">
-        <button class="arrow arrow__prev disabled" disabled>
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
-        </button>
-        <button class="arrow arrow__next">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
-        </button>
-      </div>
-    </section>
+  <section id="day1" class="timeline active">
+    <ol>
+      <li>
+        <div>
+          <time>THROUGHOUT THE DAY</time> 
+          Crosswords </br> 
+          Mazemerize </br>
+          Startup Fair </br>
+          REC Arcade </br>
+          Linux Corner</br>
+          Interficio</br>
+        </div>
+      </li>
+     
+     
+      <li>
+        <div>
+            <time>09(AM)-12(PM)
+            </time> 
+            <time>01(PM)-03(PM)
+            </time> 
+              WORKSHOP(MNTC)</br>
+              WORKSHOP(SAE)</br>
+              WORKSHOP(CCA)</Br>
+              WORKSHOP(CCA)</Br>
+              
+        </div>
+      </li>
+      <li>
+        <div>
+            <time>09(AM)-12(PM)
+            </time> 
+            <time>01(PM)-03(PM)
+            </time> 
+              WORKSHOP(RECursion)</br>
+              WORKSHOP(Cybersecurity)</br>
+              WORKSHOP(ML)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>09(AM)-12(PM)</time> 
+          Kryptic </br>
+         BPlan</br>
+         Onspot Hackathon</br>
+         Roboliga(ARMAGADON)</br>
+          StreetFury(ARMAGADON)</br>
+         
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>09(AM)-12(PM)</time>   
+          Pitstop (Arena) </br>
+          WDCT Corner(Arena)</br>
+         Quatum Quest(Arena)</br>
+         Robowar(Arena)</br>
+         Foobar CTF (0nline) </br>
+         Hackoverflow(online)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+          Clash Of Titans (Arena)</br>
+          Roboliga(ARMAGADON</br>
+          StreetFury(ARMAGADON)</br>
+          Bplan</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+          Pitstop(Arena)</br>
+         Flying the UAV (Arena)</br>
+        WDCT Corner(Arena)</br>
+           Quantum Quest (Arena)</br>
+           Robowar(Arena)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+          Decathlon(Online)<br>
+          Perplexity(2pm-5pm)</br>
+          Hackoverflow(Online)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time> 
+          Roboliga(ARMAGADON)</br>
+          Journo Detective <br>
+          Esczpe Room(6-8pm)</br>
+          Perplexity(2pm-5pm)</br>
+
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time> 
+          Flying the UAV (Arena)</br>
+          WDCT Corner(Arena)</br>
+          Seldom(Arena)</br>
+          Robowar(Arena)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time> 
+          Decathlon(Online)</br>
+          Trivial Odyssey:Buzzer Quiz (Online)</br>
+          Code Cracker(9pm-11pm)</br>
+        </div>
+      </li>
+    </ol>
+  
+    <div class="arrows">
+      <button class="arrow arrow__prev disabled" disabled>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
+      </button>
+      <button class="arrow arrow__next">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
+      </button>
+    </div>
+  </section>
 
     <section id="day2" class="timeline active" style="display: none;">
       <ol>
