fixed footer and made sponsors page dynamic

--- a/flow/static/css/contactus.css
+++ b/flow/static/css/contactus.css
@@ -34,6 +34,7 @@
   overflow-y: auto !important;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  margin-bottom: 17vh;
 }
 
 .container::-webkit-scrollbar {
