--- a/flow/templates/flow/attractions.html
+++ b/flow/templates/flow/attractions.html
@@ -118,6 +118,7 @@
     </div>
     {% endfor %}
   </div>
+  {% include 'flow/navbarAndFooter/footer.html' %}
   <script src="{% static 'attractions/js/main.js' %}"></script>
 
 </body>
