--- a/flow/templates/flow/eventsAndInitiatives/movingbg.html
+++ b/flow/templates/flow/eventsAndInitiatives/movingbg.html
@@ -6,9 +6,9 @@
     position:absolute;
     top:0;
     left:0;
-    z-index:2;
+    /* z-index:2; */
     width:100% !important;
-    height:100vh !important;
+    height:120vh !important;
     background-color: #0c0904;
   }
   .grid {
