--- a/flow/static/attractions/css/_main.css
+++ b/flow/static/attractions/css/_main.css
@@ -40,6 +40,7 @@ body::after {
   max-width: 1200px;
   padding-inline: 0.5rem;
   margin: auto;
+  margin-bottom: 10rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
