--- a/flow/static/navbarAndFooter/footer.css
+++ b/flow/static/navbarAndFooter/footer.css
@@ -127,6 +127,12 @@
   }
 } */
 
+.content{
+  bottom: 0;
+  position: relative;
+  /* margin-bottom: -5%; */
+}
+
 .social-icon {
   position: relative;
   display: flex;
@@ -163,7 +169,7 @@
   display: grid;
   position: relative;
   max-width: 100%;
-  min-height: 200px;
+  min-height: 10vh;
   /* overflow-x:hidden; */
 }
 .footer .bubbles {
@@ -185,7 +191,7 @@
   transform: translate(-50%, 100%);
 }
 .footer .content {
-  padding: 4rem;
+  padding: 3rem;
   background: var(--footer-background);
   z-index: 2;
 }
@@ -200,9 +206,13 @@
   color: #fff;
 }
 
+/* .content{
+
+} */
+
 .content h2 {
   margin-bottom: .25rem;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
 }
 
 .content span {
