--- a/flow/templates/flow/contactus.html
+++ b/flow/templates/flow/contactus.html
@@ -278,7 +278,7 @@
         </div>
       <!-- </div> -->
     </div>
-
+    {% include 'flow/navbarAndFooter/footer.html' %}
   </body>
 
   <script
