--- a/flow/static/navbarAndFooter/navbar.css
+++ b/flow/static/navbarAndFooter/navbar.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 
-.menu, .drop-menu {
+.menu,
+.drop-menu {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -11,7 +12,7 @@
 
 }
 
-#menuAndIcon{
+#menuAndIcon {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +22,7 @@
   margin: 0;
 }
 
-.logoLargeScreen{
+.logoLargeScreen {
   height: 50px;
   width: 50px
 }
@@ -36,7 +37,7 @@
   padding: 6px 10px;
   /* color: #e97957; */
   display: block;
-  
+
 }
 
 .drop-menu {
@@ -45,7 +46,7 @@
   background-color: #280e09c8;
   /* width: 200px; */
   /* max-width: 500px; */
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
   border: solid #e97957 3px;
 }
 
@@ -95,17 +96,22 @@ bar and footer */
   transition: 0.3s;
   z-index: 20000;
 }
-.navbarMenu a:hover{
+
+.navbarMenu a:hover {
   color: #e97957;
 }
-.navbarMenu a:active{
+
+.navbarMenu a:active {
   color: #e97957;
 }
-@media screen and (max-width: 1550px){
-.navbarMenu a {
-  font-size: 0.8rem
-}}
-@media screen and (max-width: 1100px){
+
+@media screen and (max-width: 1550px) {
+  .navbarMenu a {
+    font-size: 1rem
+  }
+}
+
+@media screen and (max-width: 1100px) {
   .navbarMenu {
     display: none;
   }
@@ -117,28 +123,31 @@ bar and footer */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-.aarohan_logo{
+.aarohan_logo {
   display: none;
   z-index: 100000;
-    position: fixed;
-    top: 6px;
-    left :10px;
-    width: 50px;
-    height: 50px;
-    /* margin-left: 1.7rem; */
-    margin-bottom: 0.7em;
+  position: fixed;
+  top: 6px;
+  left: 10px;
+  width: 50px;
+  height: 50px;
+  /* margin-left: 1.7rem; */
+  margin-bottom: 0.7em;
 }
-@media screen and (max-width:1100px){
-  .aarohan_logo{
+
+@media screen and (max-width:1100px) {
+  .aarohan_logo {
     display: block;
-  width: 70px;
-  height: 70px;
+    width: 70px;
+    height: 70px;
   }
-  .logoLargeScreen{
+
+  .logoLargeScreen {
     display: none;
   }
 }
-.section-center{
+
+.section-center {
   position: absolute;
   top: 50%;
   left: 0;
@@ -150,13 +159,15 @@ bar and footer */
   text-align: center;
   transform: translateY(-50%);
 }
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
 }
-.menu-icon:checked + label,
-.menu-icon:not(:checked) + label{
+
+.menu-icon:checked+label,
+.menu-icon:not(:checked)+label {
   position: fixed;
   top: 30px;
   right: 75px;
@@ -169,8 +180,9 @@ bar and footer */
   cursor: pointer;
   z-index: 20000;
 }
-.menu-icon:checked + label:before,
-.menu-icon:not(:checked) + label:before{
+
+.menu-icon:checked+label:before,
+.menu-icon:not(:checked)+label:before {
   position: absolute;
   content: '';
   /* display: block; */
@@ -183,14 +195,15 @@ bar and footer */
   left: 0;
   border-top: 2px solid #ECECEE;
   border-bottom: 2px solid #ECECEE;
-  transition: border-width 100ms 1500ms ease, 
-              top 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1), 
-              background-color 200ms ease,
-              transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: border-width 100ms 1500ms ease,
+    top 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
+    height 100ms 1600ms cubic-bezier(0.23, 1, 0.32, 1),
+    background-color 200ms ease,
+    transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-.menu-icon:checked + label:after,
-.menu-icon:not(:checked) + label:after{
+
+.menu-icon:checked+label:after,
+.menu-icon:not(:checked)+label:after {
   position: absolute;
   content: '';
   /* display: block; */
@@ -203,35 +216,37 @@ bar and footer */
   right: 4px;
   background-color: #ECECEE;
   margin-top: -1px;
-  transition: width 100ms 1750ms ease, 
-              right 100ms 1750ms ease,
-              margin-top 100ms ease, 
-              transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: width 100ms 1750ms ease,
+    right 100ms 1750ms ease,
+    margin-top 100ms ease,
+    transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-.menu-icon:checked + label:before{
+
+.menu-icon:checked+label:before {
   top: 10px;
   transform: rotate(45deg);
   height: 2px;
   background-color: #ECECEE;
   border-width: 0;
-  transition: border-width 100ms 340ms ease, 
-              top 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1), 
-              background-color 200ms 500ms ease,
-              transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: border-width 100ms 340ms ease,
+    top 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+    height 100ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+    background-color 200ms 500ms ease,
+    transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-.menu-icon:checked + label:after{
+
+.menu-icon:checked+label:after {
   width: 30px;
   margin-top: 0;
   right: 0;
   transform: rotate(-45deg);
   transition: width 100ms ease,
-              right 100ms ease,  
-              margin-top 100ms 500ms ease, 
-              transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
+    right 100ms ease,
+    margin-top 100ms 500ms ease,
+    transform 200ms 1700ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.nav{
+.nav {
   position: fixed;
   top: 6px;
   right: 50px;
@@ -243,50 +258,77 @@ bar and footer */
   margin: 0;
   /* z-index: 20000; */
   overflow: hidden;
-  box-shadow: 0 8px 30px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.3);
   background-color: #280e09db;
   animation: border-transform 7s linear infinite;
-  transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),  
-              right 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
-              transform 250ms 1100ms ease,
-              width 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
+    right 350ms 1100ms cubic-bezier(0.23, 1, 0.32, 1),
+    transform 250ms 1100ms ease,
+    width 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1),
+    height 650ms 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
-@media screen and (max-width: 1100px){
-  .nav{
+
+@media screen and (max-width: 1100px) {
+  .nav {
     display: block;
-   
+
   }
 
-  
-  .menu-icon:checked + label:after,
-.menu-icon:not(:checked) + label:after{
-  display: block;
-}
-.menu-icon:checked + label,
-.menu-icon:not(:checked) + label{
-  display: block;
-}
-.menu-icon:checked + label,
-.menu-icon:not(:checked) + label{
-  display: block;
-}
-.menu-icon:checked + label:before,
-.menu-icon:not(:checked) + label:before{
-  display: block;
-}
-}
-@keyframes border-transform{
-    0%,100% { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-  14% { border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%; } 
-  28% { border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; } 
-  42% { border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; } 
-  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-  70% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-  84% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
+
+  .menu-icon:checked+label:after,
+  .menu-icon:not(:checked)+label:after {
+    display: block;
+  }
+
+  .menu-icon:checked+label,
+  .menu-icon:not(:checked)+label {
+    display: block;
+  }
+
+  .menu-icon:checked+label,
+  .menu-icon:not(:checked)+label {
+    display: block;
+  }
+
+  .menu-icon:checked+label:before,
+  .menu-icon:not(:checked)+label:before {
+    display: block;
+  }
 }
 
-.menu-icon:checked ~ .nav {
+@keyframes border-transform {
+
+  0%,
+  100% {
+    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
+  }
+
+  14% {
+    border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%;
+  }
+
+  28% {
+    border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%;
+  }
+
+  42% {
+    border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%;
+  }
+
+  56% {
+    border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%;
+  }
+
+  70% {
+    border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%;
+  }
+
+  84% {
+    border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%;
+  }
+}
+
+.menu-icon:checked~.nav {
   animation-play-state: paused;
   z-index: 20000;
   top: 50%;
@@ -294,23 +336,27 @@ bar and footer */
   transform: translate(50%, -50%);
   width: 200%;
   height: 200%;
-  transition: top 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),  
-              right 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
-              transform 250ms 700ms ease,
-              width 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1),
-              height 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
+    right 350ms 700ms cubic-bezier(0.23, 1, 0.32, 1),
+    transform 250ms 700ms ease,
+    width 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1),
+    height 750ms 1000ms cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 @media screen and (max-width: 400px) {
-  .menu-icon:checked + label,
-  .menu-icon:not(:checked) + label{
+
+  .menu-icon:checked+label,
+  .menu-icon:not(:checked)+label {
     z-index: 40000;
-  }}
-  /* @media screen and (max-width: 919px) {
+  }
+}
+
+/* @media screen and (max-width: 919px) {
     .menu-icon:checked + label,
     .menu-icon:not(:checked) + label{
       z-index: 40000;
     }} */
-.nav .ul{
+.nav .ul {
   position: absolute;
   top: 50%;
   left: 0;
@@ -323,7 +369,8 @@ bar and footer */
   transform: translateY(-50%);
   list-style: none;
 }
-.nav .ul li{
+
+.nav .ul li {
   position: relative;
   display: block;
   width: 100%;
@@ -337,40 +384,52 @@ bar and footer */
   transform: translateY(30px);
   transition: all 250ms linear;
 }
-.nav ul li:nth-child(1){
+
+.nav ul li:nth-child(1) {
   transition-delay: 200ms;
 }
-.nav ul li:nth-child(2){
+
+.nav ul li:nth-child(2) {
   transition-delay: 180ms;
 }
-.nav ul li:nth-child(3){
+
+.nav ul li:nth-child(3) {
   transition-delay: 160ms;
 }
-.nav ul li:nth-child(4){
+
+.nav ul li:nth-child(4) {
   transition-delay: 140ms;
 }
-.nav ul li:nth-child(5){
-    transition-delay: 120ms;
-  }
-  .nav ul li:nth-child(6){
-    transition-delay: 100ms;
-  }
-  .nav ul li:nth-child(7){
-    transition-delay: 80ms;
-  }
-  .nav ul li:nth-child(8){
-    transition-delay: 60ms;
-  }
-  .nav ul li:nth-child(9){
-    transition-delay: 40ms;
-  }
-  .nav ul li:nth-child(10){
-    transition-delay: 20ms;
-  }
-  .nav ul li:nth-child(11){
-    transition-delay: 0ms;
-  }
-.nav ul li a{
+
+.nav ul li:nth-child(5) {
+  transition-delay: 120ms;
+}
+
+.nav ul li:nth-child(6) {
+  transition-delay: 100ms;
+}
+
+.nav ul li:nth-child(7) {
+  transition-delay: 80ms;
+}
+
+.nav ul li:nth-child(8) {
+  transition-delay: 60ms;
+}
+
+.nav ul li:nth-child(9) {
+  transition-delay: 40ms;
+}
+
+.nav ul li:nth-child(10) {
+  transition-delay: 20ms;
+}
+
+.nav ul li:nth-child(11) {
+  transition-delay: 0ms;
+}
+
+.nav ul li a {
   font-family: 'Raleway', sans-serif;
   font-size: 3.3rem;
   text-decoration: none;
@@ -382,82 +441,101 @@ bar and footer */
   color: #e97957;
   transition: all 250ms linear;
 }
-.nav ul li a:hover{
+
+.nav ul li a:hover {
   text-decoration: none;
   color: #fff;
 }
-.nav ul li a:hover:after{
+
+.nav ul li a:hover:after {
   width: 100%;
 }
-.menu-icon:checked ~ .nav  ul li {
+
+.menu-icon:checked~.nav ul li {
   pointer-events: auto;
   visibility: visible;
   opacity: 1;
   transform: translateY(0);
   transition: opacity 350ms ease,
-              transform 250ms ease;
+    transform 250ms ease;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(1){
+
+.menu-icon:checked~.nav ul li:nth-child(1) {
   transition-delay: 1400ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(2){
+
+.menu-icon:checked~.nav ul li:nth-child(2) {
   transition-delay: 1480ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(3){
+
+.menu-icon:checked~.nav ul li:nth-child(3) {
   transition-delay: 1560ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(4){
+
+.menu-icon:checked~.nav ul li:nth-child(4) {
   transition-delay: 1640ms;
 }
-.menu-icon:checked ~ .nav ul li:nth-child(5){
-    transition-delay: 1720ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(6){
-    transition-delay: 1800ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(7){
-    transition-delay: 1880ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(8){
-    transition-delay: 1960ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(9){
-    transition-delay: 2040ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(10){
-    transition-delay: 2120ms;
-  }
-  .menu-icon:checked ~ .nav ul li:nth-child(11){
-    transition-delay: 2200ms;
-  }
+
+.menu-icon:checked~.nav ul li:nth-child(5) {
+  transition-delay: 1720ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(6) {
+  transition-delay: 1800ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(7) {
+  transition-delay: 1880ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(8) {
+  transition-delay: 1960ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(9) {
+  transition-delay: 2040ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(10) {
+  transition-delay: 2120ms;
+}
+
+.menu-icon:checked~.nav ul li:nth-child(11) {
+  transition-delay: 2200ms;
+}
+
 .logo {
-	position: absolute;
-	top: 60px;
-	left: 50px;
-	display: block;
-	z-index: 11;
-	transition: all 250ms linear;
+  position: absolute;
+  top: 60px;
+  left: 50px;
+  display: block;
+  z-index: 11;
+  transition: all 250ms linear;
 }
+
 .logo img {
-	height: 26px;
-	width: auto;
-	display: block;
+  height: 26px;
+  width: auto;
+  display: block;
 }
+
 @media screen and (max-width: 991px) {
-  .menu-icon:checked + label,
-  .menu-icon:not(:checked) + label{
+
+  .menu-icon:checked+label,
+  .menu-icon:not(:checked)+label {
     right: 55px;
     z-index: 40000;
   }
-  
+
   .logo {
     left: 30px;
   }
-  .nav{
+
+  .nav {
     right: 30px;
   }
-  
-  .nav ul li a{
+
+  .nav ul li a {
     font-size: 1.5rem;
     margin-bottom: 2px;
     margin-top: 2px;
@@ -466,7 +544,7 @@ bar and footer */
 
 @media screen and (max-width: 400px) {
 
-    .nav ul li a{
-      font-size: 1.5rem;
-    }
+  .nav ul li a {
+    font-size: 1.5rem;
   }
+}
