--- a/flow/templates/flow/navbarAndFooter/navbar.html
+++ b/flow/templates/flow/navbarAndFooter/navbar.html
@@ -4,11 +4,7 @@
 	<div id="menuAndIcon">
 		<div class="navbarMenu">
 			<a href="{% url 'home' %}">
-				<img
-					class="logoLargeScreen"
-					src="{% static 'img/aarhn.png' %}"
-					alt=""
-				/>
+				<img class="logoLargeScreen" src="{% static 'img/aarhn24Logo.png' %}" alt="" />
 			</a>
 			<a href="{% url 'socialInitiatives' %}">Initiatives</a>
 
@@ -34,19 +30,16 @@
 			<a href="{% url 'contactus' %}">Contact Us</a>
 			<a href="{% url 'sponsors' %}">Sponsors</a>
 			<a href="{% url 'teams' %}">Teams</a>
-			<!-- <a href="{% url 'merch' %}">Merchandise</a> -->
 			<div id="indicator"></div>
 		</div>
 	</div>
-	<img class="aarohan_logo" src="{% static 'img/aarhn.png' %}" alt="" />
+	<img class="aarohan_logo" src="{% static 'img/aarhn24Logo.png' %}" alt="" />
 	<input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
 	<label for="menu-icon" class="cross-icon-teams"></label>
 	<nav class="nav">
 		<ul class="ul">
 			<li class="nav-link">
-				<a href="{% url 'socialInitiatives' %}"
-					>Initiatives</a
-				>
+				<a href="{% url 'socialInitiatives' %}">Initiatives</a>
 			</li>
 			<li class="nav-link"><a href="{% url 'events' %}">Events</a></li>
 			<li class="nav-link"><a href="{% url 'workshops' %}">Workshops</a></li>
@@ -58,7 +51,6 @@
 			<li class="nav-link"><a href="{% url 'contactus' %}">Contact Us</a></li>
 			<li class="nav-link"><a href="{% url 'sponsors' %}">Sponsors</a></li>
 			<li class="nav-link"><a href="{% url 'teams' %}">Teams</a></li>
-			<!-- <li class="nav-link"><a href="{% url 'merch' %}">Merchandise</a></li> -->
 		</ul>
 	</nav>
 </div>
