--- a/flow/templates/flow/teams.html
+++ b/flow/templates/flow/teams.html
@@ -1,212 +1,114 @@
 {% load static %}
 <!DOCTYPE html>
-<!-- data-wf-domain="www.metachors.com" -->
-<html
-  data-wf-page="62c7ea6fad2d011fb93d6be0"
-  data-wf-site="62c7ea6fad2d0134623d6bde"
-  lang="en"
->
-  <head>
-    <meta charset="utf-8" />
-    <title>Teams Page</title>
-    <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
-    <link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarohan_logo1-01.png' %}">
+<html lang="en">
 
-    <link
-      rel="stylesheet"
-      href="{% static 'teams/css/styles.css' %}"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="{% static 'teams/css/style3.css' %}"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="{% static 'teams/css/card2.css' %}"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="{% static 'teams/css/teams.css' %}"
-      type="text/css"
-    />
-    
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Teams</title>
+  <link rel="stylesheet" href="{% static 'css/teams/teams.css'%}">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- <link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarhn24Logo.png' %}"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"
-      type="text/javascript"
-    ></script>
-    <script type="text/javascript" src="{% static 'teams/js/teams.js' %}"> </script>
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-REZ8MWBW1B"
-    ></script>
-  </head>
-  <body class="body">
-    {% include 'flow/navbarAndFooter/navbar.html' %}
-    <div class="container">
-      <div
-        data-w-id="52c0daad-0247-a6d7-0a85-9e080f0c9283"
-        class="bg-space-section"
-      >
-        <div class="scroll-div-journey">
-          <div class="space-bg-sticky">
-            <div
-              data-is-ix2-target="1"
-              class="space-lottie"
-              data-w-id="0a74ddcc-6344-9c97-0f58-d0b3ff278088"
-              data-animation-type="lottie"
-              data-loop="1"
-              data-direction="1"
-              data-autoplay="0"
-              data-renderer="svg"
-              data-default-duration="4"
-              data-duration="6"
-            ></div>
-          </div>
+</head>
+
+<body>
+  {% include 'flow/navbarAndFooter/navbar.html' %}
+  <section>
+    <div class="svg-div">
+      <div class="svg-icon">
+        <h1 class="teamHeading">TEAMS</h1>
+        <?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 16.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+        <div class="svgIcon">
+          {%include 'flow/teamSvg.html' %}
+
         </div>
-      <div class="social_icons" onclick="Updown()" id="icon-down">
-        <p>
-          <i class="fa fa-chevron-down ic1" aria-hidden="true"></i>
-        </p>
-        <p>
-          <i class="fa fa-chevron-down ic2" aria-hidden="true"></i>
-        </p>
-      </div>
-        <section id="our-journey" class="our-journey wf-section">
-          <div class="journey-text-wrapper">
-            <img
-              class="team-text"
-              src="{% static 'img/TEAMS_white.png' %}"
-            />
-          </div>
-          <div class="container-lottie-loop-journey">
-            <div
-              data-is-ix2-target="1"
-              class="lottie-loop"
-              data-w-id="f5a74dea-cbca-0b99-e75a-4897662616f8"
-              data-animation-type="lottie"
-              data-src="{% static 'img/rocket.svg' %}"
-              data-loop="0"
-              data-direction="1"
-              data-autoplay="0"
-              data-renderer="svg"
-              data-default-duration="4"
-              data-duration="0"
-            ></div>
-          </div>
-          <div class="container-clouds">
-            <img
-              src="{% static 'img/clouds.svg' %}"
-              loading="lazy"
-              alt=""
-              class="lottie-loop clouds"
-            />
-
-            <div class="absolute-journey">
-              {% for team in teams %}
-              <div class="journey-step">
-                {% if team.teamId == "0" or team.teamId == "3" %}
-                <div class="images-wrapper-journey">
-                  <div
-                    class="ove-crates year-text"
-                    
-                    onclick="ToggleModal({{team.teamId}})"
-                  >
-                    {{team.name}}
-                  </div>
-                </div>
-                {% endif %}
-                {% if team.teamId == "4"  %}
-                <div class="text-wrapper-journey">
-                  <div class="ove-crates year-text"
-                       
-                       onclick="ToggleModal({{team.teamId}})">
-                    {{team.name}}
-                  </div>
-                </div>
-                {% endif %}
-              </div>
-              <div class="journey-step dx">
-                {% if team.teamId == "1" or team.teamId == "5" %}
-                <div class="images-wrapper-journey _2">
-                  <div class="ove-crates year-text"
-                  
-                  onclick="ToggleModal({{team.teamId}})">
-                  {{team.name}}</div>
-                </div>
-                {% endif %}
-                {% if team.teamId == "2" or team.teamId == "6"%}
-                <div class="text-wrapper-journey _2">
-                  <div class="ove-crates year-text"
-                  
-                  onclick="ToggleModal({{team.teamId}})">
-                  {{team.name}}</div>
-                </div>
-                {% endif %}
-              </div>
-              {% endfor %}
-            </div>
-          </div>
-          <div class="clouds-mobile">
-            <img
-              src="{% static 'img/clouds2.svg' %}"
-              loading="lazy"
-              alt=""
-              class="image-cover"
-            />
-          </div>
-        </section>
       </div>
     </div>
-    <div class="mars-cont open2">
-      {% for team in teams %}
-      <div class="team-page category" id="{{team.teamId}}">
-        <h1 class="header">{{team.name}}</h1>
-        <div class="clss">✖</div>
-        <div class="card-wrapper">
-          {% for member_team in members %}
-           {% for individual in member_team %}
-            {% for memberTeam in individual.team.all %}
-              {% if memberTeam.teamId == team.teamId %}
-          <div class="card">
-            <div class="card__border">
-              <img
-                src="{{ individual.profile_img.url }}"
-                alt="card image"
-                class="card__img"
-              />
-            </div>
-            <h3 class="card__name">{{ individual.name }}</h3>
-            <span class="card__profession">{{individual.position}}</span>
-          </div>
-          {% endif %}
-         {% endfor %}
-          {% endfor %}
-           {% endfor %}
+  </section>
+  <section>
+    <div class="teamCard">
+      {% for eachTeam in teams %}
+      <div {% if eachTeam.teamId|divisibleby:2 %}data-aos="fade-right" {% else %}data-aos="fade-left" {% endif %}
+        data-aos-duration="1000">
+        <div class="card {% if not eachTeam.teamId|divisibleby:2 %}card2{% endif %}" id="card{{ eachTeam.teamId }}">
+          <label for="button" class="card-content">
+            <h1>{{ eachTeam.name }}</h1>
+            <div class="card-cover"></div>
+          </label>
         </div>
       </div>
       {% endfor %}
-      
+      <input id="button" type="checkbox">
+      <div class="modal" id="modal">
+        <div>
+          <div class="mainTeam">
+            {% for queryset in members %}
+            {% for mem in queryset %}
+            <div class="profile" data-team="{{ mem.teamName }}">
+              <div class="profile-card">
+                <div class="img">
+                  <img
+                    src="https://1.bp.blogspot.com/-8c7QTLoyajs/YLjr2V6KYRI/AAAAAAAACO8/ViVPQpLWVM0jGh3RZhh-Ha1-1r3Oj62wQCNcBGAsYHQ/s16000/team-1-3.jpg">
+                </div>
+                <div class="caption">
+                  <h3>{{ mem.name }}</h3>
+                  <p>{{ mem.position }}</p>
+                  <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            {% endfor %}
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
+  <script>
+    document.querySelectorAll('.card').forEach(function (card) {
+      card.addEventListener('click', function () {
+        let cardId = card.getAttribute('id');
+        let teamName = card.querySelector('h1').textContent;
+        showProfilesByTeam(teamName);
+      });
+    });
 
+    document.getElementById('button').addEventListener('change', function () {
+      let modal = document.getElementById('modal');
+      if (this.checked) {
+        modal.classList.add('active');
+      } else {
+        modal.classList.remove('active');
+      }
+    });
 
-    <script
-      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62c7ea6fad2d0134623d6bde"
-      type="text/javascript"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://uploads-ssl.webflow.com/62c7ea6fad2d0134623d6bde/js/webflow.8dfeddd84.js"
-      type="text/javascript"
-    ></script>
-    <script src="{% static 'teams/js/teamrun.js' %}"></script>
-    <!--[if lte IE 9
-      ]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script
-    ><![endif]-->
-  </body>
+    function showProfilesByTeam(teamName) {
+      let profiles = document.querySelectorAll('.profile');
+      profiles.forEach(function (profile) {
+        let memTeamName = profile.getAttribute('data-team');
+        if (memTeamName === teamName) {
+          profile.style.display = 'block';
+        } else {
+          profile.style.display = 'none';
+        }
+      });
+    }
+  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="{% static 'js/teams.js'%}"></script>
+</body>
+
 </html>
