--- a/flow/templates/flow/homepage.html
+++ b/flow/templates/flow/homepage.html
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
   <link rel="shortcut icon" type="image/jpg" href="{% static 'img/aarhn24Logo.png' %}">
   <link rel="stylesheet" href="{% static 'homepage/css/homePage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/loader.css'%}">
 </head>
 
 
@@ -21,7 +22,27 @@
       <audio id="audio" src="{% static 'videos/bau.mp3' %}" autoplay></audio>
     </div>
   </div>
+  <div class="loading" style="background-color: rgb(0, 0, 0);">
+    <div class="loading-text">
+      <span class="loading-text-words">L</span>
+      <span class="loading-text-words">O</span>
+      <span class="loading-text-words">A</span>
+      <span class="loading-text-words">D</span>
+      <span class="loading-text-words">I</span>
+      <span class="loading-text-words">N</span>
+      <span class="loading-text-words">G</span>
+    </div>
+  </div>
 
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+
+      setTimeout(function () {
+        document.querySelector('.loading').style.display = 'none';
+        document.getElementById('dynamic_video').play();
+      }, 4000);
+    });
+  </script>
 
   <script src="{% static 'js\home.js'%}"></script>
 </body>
