--- a/flow/static/css/loader.css
+++ b/flow/static/css/loader.css
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(35, 6, 78);
+    background: rgb(8 38 71);
     z-index: 99999999999999999999999;
 }
 
