--- a/flow/templates/flow/homepage.html
+++ b/flow/templates/flow/homepage.html
@@ -22,7 +22,7 @@
       <audio id="audio" src="{% static 'videos/bau.mp3' %}" autoplay></audio>
     </div>
   </div>
-  <div class="loading" style="background-color: rgb(0, 0, 0);">
+  <div class="loading">
     <div class="loading-text">
       <span class="loading-text-words">L</span>
       <span class="loading-text-words">O</span>
