fix on nav logo link

--- a/flow/templates/flow/navbarAndFooter/navbar.html
+++ b/flow/templates/flow/navbarAndFooter/navbar.html
@@ -33,7 +33,9 @@
 			<div id="indicator"></div>
 		</div>
 	</div>
-	<img class="aarohan_logo" src="{% static 'img/aarhn24Logo.png' %}" alt="" />
+	<a href="{% url 'home' %}">
+		<img class="aarohan_logo" src="{% static 'img/aarhn24Logo.png' %}" alt="" />
+	</a>
 	<input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon" />
 	<label for="menu-icon" class="cross-icon-teams"></label>
 	<nav class="nav">
