fixed timeline page

--- a/flow/templates/flow/aarohan_timeline.html
+++ b/flow/templates/flow/aarohan_timeline.html
@@ -38,7 +38,7 @@
       Your browser does not support the video tag.
   </video>  {% endcomment %} -->
 
-  {% comment %} <img src="{% static 'images/timeline_bg.jpg' %}" alt=""> {% endcomment %}
+  <img src="{% static 'images/timeline_bg.jpg}" alt="">
 
   <div class="Dayz">
        
@@ -46,82 +46,119 @@
     <a class="btn-ap" style="color:rgb(255, 255, 255)" href="{% url 'timelineDay2' %}">Day2</a>
     <a class="btn-ap" style="color:rgb(255, 255, 255)" href="{% url 'timelineDay3' %}">Day3</a>
   </div>
-    <section id="day1" class="timeline active">
-      <ol>
-        <li>
-          <div>
-            <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li>
-          <div>
-            <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-          </div>
-        </li>
-        <li></li>
-      </ol>
+  <section id="day1" class="timeline active">
+    <ol>
+      <li>
+        <div>
+          <time>THROUGHOUT THE FEST</time> 
+          Crosswords </br> 
+          Mazemerize </br>
+          Startup Fair </br>
+          REC Arcade </br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>09(AM)-12(PM)</time> 
+          <time>01(PM)-03(PM)</time> 
+          WORKSHOP (Cybersecurity) </br>
+          WORKSHOP (ML)    </br>
+        </div>
+      </li>
+     
+      <li>
+        <div>
+          <time>09(AM)-12(PM)</time> 
+          Call Out Sherlock </br>
+          Bid Wit </br>
+          Car Auction </br>
+         Startup Fair </br>
+        
+        </div>
+      </li>
+      
     
-      <div class="arrows">
-        <button class="arrow arrow__prev disabled" disabled>
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
-        </button>
-        <button class="arrow arrow__next">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
-        </button>
-      </div>
-    </section>
+      <li>
+        <div>
+          <time>09(AM)-12(PM)</time> 
+          Linux Corner (throughout day)</br>
+          Hackoverflow (throughout day) </br>
+          Interficio(throughout day)
+        </div>
+      </li>
+  
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+          Call Out Sherlock </br>
+          House of Cups </br>
+          Electra </br>
+          Car Auction </br>
+          Onspot Hackathon</br>
+          Mindsweeper(finalRound)</br>
+        </div>
+      </li>
+     
+      
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+          Invictus (prelims)(online) </br>
+        Be a billionaire (prelims)(online) </br>
+        Contraptions (prelims)(online) </br>
+        FantasyFootball(prelims)online(8PM-12AM)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>01(PM)-03(PM)</time> 
+        Linux Corner (throughout day)</br>
+          Hackoverflow (throughout day) </br>
+          Interficio(throughout day)<br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time>
+           Matrix </br>
+           Electra </br>
+           Flying the UAV  </br>
+           Ripple Effect </br>
+           Onspot Hackathon</br>
+           Mindsweeper(finalRound)</br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time>
+          Pitstop(online) </br>
+          Freemex (online) </br>
+          MinderSnatch (online) </br>
+        </div>
+      </li>
+      <li>
+        <div>
+          <time>03(PM)-06(PM)</time>
+          Techmela(Arena) </br>
+          Linux Corner (throughout day)</br>
+          Hackoverflow (throughout day) </br>
+          Interficio(throughout day)<br>
+          FantasyFootball(prelims)online(8PM-12AM)</br>
+        </div>
+      </li>
+    </ol>
+  
+    <div class="arrows">
+      <button class="arrow arrow__prev disabled" disabled>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
+      </button>
+      <button class="arrow arrow__next">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
+      </button>
+    </div>
+  </section>
 
-    <section id="day2" class="timeline active" style="display: none;">
+    <!-- {% comment %} <section id="day2" class="timeline active" style="display: none;">
       <ol>
         <li>
           <div>
@@ -194,9 +231,9 @@
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
         </button>
       </div>
-    </section>
+    </section> {% endcomment %} -->
 
-    <section id="day3" class="timeline active" style="display: none;">
+    <!-- {% comment %} <section id="day3" class="timeline active" style="display: none;">
       <ol>
         <li>
           <div>
@@ -269,7 +306,7 @@
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
         </button>
       </div>
-    </section>
+    </section> {% endcomment %} -->
   
 </div>
     <script src="{% static 'js/timeline.js' %}"></script>
