--- a/flow/templates/flow/day3_timeline.html
+++ b/flow/templates/flow/day3_timeline.html
@@ -195,7 +195,7 @@
       </div>
     </section>
 
-    <section id="day3" class="timeline active" style="display: none;">
+    {% comment %} <section id="day3" class="timeline active" style="display: none;">
       <ol>
         <li>
           <div>
@@ -268,7 +268,7 @@
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
         </button>
       </div>
-    </section>
+    </section> {% endcomment %}
   
 </div>
     <script src="{% static 'js/timeline.js' %}"></script>
