--- a/flow/templates/flow/day4_timeline.html
+++ b/flow/templates/flow/day4_timeline.html
@@ -171,7 +171,7 @@
     </div>
   </section>
 
-    <section id="day2" class="timeline active" style="display: none;">
+    {% comment %} <section id="day2" class="timeline active" style="display: none;">
       <ol>
         <li>
           <div>
@@ -319,7 +319,7 @@
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
         </button>
       </div>
-    </section>
+    </section> {% endcomment %}
   
 </div>
     <script src="{% static 'js/timeline.js' %}"></script>
